<resources>
    <string name="app_name">Studinotes</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="school">School/College</string>
    <string name="forget">Forgot Password?</string>
    <string name="reset">Reset Password</string>
    <string name="create">Create Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Registration</string>
    <string name="or">OR</string>
    <string name="otp">OTP</string>
    <string name="study">Study Notes</string>
    <string name="assess">Assessment</string>
    <string name="tips">Tips and Tricks</string>
    <string name="time">Time Management</string>
    <string name="examname">Exam Name</string>
    <string name="subjectname">Subject Name</string>
    <string name="only_subject">Subject</string>
    <string name="examdate">Exam Date</string>
    <string name="examtime">Exam Time</string>
    <string name="notifyme">Notify Me</string>
    <string name="assessname">Assessment Name</string>
    <string name="assessdate">Start Date</string>
    <string name="assesstime">Due Date Time</string>
    <string name="examdetail">Exam Details</string>
    <string name="assessdetail">Assessment Details</string>
    <string name="schedule">Create Schedule</string>
    <string name="day">Day</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="timealloc">Time allocation</string>
    <string name="social">Social Media</string>
    <string name="total">Total</string>
    <string name="five">5 mins</string>
    <string name="ten">10 mins</string>
    <string name="twenty">20 mins</string>
    <string name="setting">Settings</string>
    <string name="suggest">Suggestion</string>
    <string name="feedback">Feedback</string>
    <string name="report">Report</string>
    <string name="folder">Folder</string>
    <string name="documents">Documents</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="maths">Mathematics</string>
    <string name="edit">Edit</string>
    <string name="name">Jon Dove</string>
    <string name="notepad">Notepad</string>
    <string name="random1">Random</string>
    <string name="important">Important</string>
    <string name="random">Random/Important</string>
    <string name="suggest1">Please provide suggestions in the box below:</string>
    <string name="feedback1">Please provide feedback in the box below:</string>
    <string name="report1">Report an issue in the box below:</string>
    <string name="change">Change background color</string>
    <string name="lorem">Lorem ipsum is a dummy text used to replace text in some areas just for the purpose of an example. It can be used in publishing and graphic design. It is used to demonstrate the graphics elements of a document, such as font, typography, and layout.</string>
    <string name="create1">Create Folder</string>
    <string name="upload">Add Documents</string>
    <string name="insert">Add Image</string>
    <string name="open">Add Video </string>
    <string name="add_audio">Add Audio </string>
    <string name="add_other_files">Add Others Files </string>
    <string name="add_notepad">Add Note Pad </string>
    <string name="add_drawingpad">Add Drawing Pad </string>
    <string name="loading">Loading</string>
    <string name="empty_first_name">Empty First Name</string>
    <string name="empty_second_name">Empty Last Name</string>
    <string name="empty_school_name">Empty School Name</string>
    <string name="empty_email_name">Empty Email ID</string>
    <string name="validate_email">Improper Email id </string>
    <string name="password_empty">Empty Password </string>
    <string name="check_network">Check Your Network Connection  </string>
    <string name="pass_not_match">Password Not Match</string>
    <string name="rePass">Empty Confirm Password</string>
    <string name="otp_empty">OTP is Empty</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">cancel</string>
    <string name="select_option">Select Option</string>
    <string name="camera_permission_error">Camera Permission error</string>
    <string name="insert_suggestion">Please Fill your Suggestion </string>
    <string name="insert_feedback">Please Fill your Feedback</string>
    <string name="insert_report">Please Fill Report </string>
    <string name="enter_exam_name">Please Enter Exam Name </string>
    <string name="enter_subject">Please Enter Subject </string>
    <string name="enter_exam_date">Please Enter Exam Date </string>
    <string name="enter_exam_time">Please Enter Exam Time </string>

    <string name="mosaic">Mosaic</string>
    <string name="scale_gesture_item">Scale gesture</string>
    <string name="guide">Doodle Guide</string>
    <string name="simple_doodle">Simple doodle</string>
    <string name="middle_doodle">Middle doodle</string>
    <string name="advanced_doodle">Advanced doodle</string>

</resources>
