<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@android:color/white"

    >

    <RelativeLayout
        android:id="@+id/dialog_main"
        android:layout_width="250dp"
         android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"

        android:background="@drawable/allcurve_white"


        >

    <Button
        android:id="@+id/create1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="@drawable/cancel_button"
        android:clickable="true"
        android:text="@string/create1"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/upload"
        android:layout_below="@id/create1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/cancel_button"
        android:clickable="true"
        android:text="@string/upload"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/add_image"
        android:layout_below="@id/upload"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/cancel_button"
        android:clickable="true"
        android:text="@string/insert"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/add_video"
        android:layout_below="@id/add_image"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/cancel_button"
        android:clickable="true"
        android:text="@string/open"
        android:textColor="@android:color/black"
        />
        <Button
            android:id="@+id/add_audio"
            android:layout_below="@id/add_video"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/cancel_button"
            android:clickable="true"
            android:text="@string/add_audio"
            android:textColor="@android:color/black"
            />

        <Button
            android:id="@+id/add_other_file"
            android:layout_below="@id/add_audio"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/cancel_button"
            android:clickable="true"
            android:text="@string/add_other_files"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/add_notpad"
            android:layout_below="@id/add_other_file"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/cancel_button"
            android:clickable="true"
            android:text="@string/add_notepad"
            android:textColor="@android:color/black"
            />
        <Button
            android:id="@+id/add_drawingpad"
            android:layout_below="@id/add_notpad"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"

            android:layout_marginBottom="5dp"
            android:background="@drawable/cancel_button"
            android:clickable="true"
            android:text="@string/add_drawingpad"
            android:textColor="@android:color/black"
            />


    </RelativeLayout>



</RelativeLayout>


