<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:drawableTop="@mipmap/logo"
                android:drawablePadding="30dp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="40dp"
                android:textSize="27sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/curve_white"
            android:padding="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="25sp"
                android:paddingBottom="30dp"
                android:textColor="@android:color/black"
                android:gravity="center"/>


            <EditText
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:drawablePadding="20dp"
                android:paddingBottom="20dp"
                android:drawableStart="@mipmap/user"
                android:inputType="textEmailAddress"
                android:hint="@string/first"/>


            <EditText
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:paddingBottom="20dp"
                android:drawableStart="@mipmap/user"
                android:hint="@string/last"/>

            <EditText
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:paddingBottom="20dp"
                android:drawableStart="@mipmap/school"
                android:hint="@string/school"/>

            <EditText
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:inputType="textEmailAddress"
                android:drawablePadding="20dp"
                android:paddingBottom="20dp"
                android:drawableStart="@mipmap/email"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:inputType="textPassword"
                android:drawablePadding="20dp"
                android:paddingBottom="20dp"
                android:drawableStart="@mipmap/password"
                android:hint="@string/password"/>

            <ImageView
                android:id="@+id/next1"
                android:contentDescription="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_gravity="end"
                android:src="@mipmap/login_arrow"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:gravity="center"
                android:textSize="15sp"
                android:padding="10dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

            <TextView
                android:id="@+id/login1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
