<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:padding="6dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjectname"
            android:textSize="12sp"
            android:padding="6dp"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starttime"
            android:padding="6dp"
            android:textSize="12sp"
            android:layout_weight="5"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/end1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endtime"
            android:padding="6dp"
            android:textSize="12sp"
            android:layout_weight="5"
            android:textColor="@android:color/black"/>
        <!--<TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:padding="6dp"
            android:layout_weight="2"
            android:textColor="@android:color/black"/>-->

        <TextView
            android:id="@+id/bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:padding="6dp"
            android:textSize="12sp"
            android:layout_weight="5"
            android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/notify"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/editschedule"
            android:padding="6dp"
            />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/green"
        android:background="@android:color/darker_gray"
        />

</RelativeLayout>
