<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/allcurve_white"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:editable="false"
        android:layout_marginRight="40dp"
        android:hint="@string/day"
        android:paddingBottom="20dp"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        />
        <ImageButton
            android:id="@+id/calendar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/date"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/subjectname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/subjectname"
        android:paddingBottom="20dp"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="18dp"
        android:editable="false"
        android:hint="@string/starttime"
        android:layout_marginRight="40dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="15dp"
        />
    <ImageButton
        android:id="@+id/clock2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/time"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="18dp"
        android:editable="false"
        android:layout_marginRight="40dp"
        android:hint="@string/endtime"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="15dp"
        />
        <ImageButton
            android:id="@+id/clock3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/time"

            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
    <EditText
        android:id="@+id/notifyme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:editable="false"
        android:paddingBottom="18dp"
        android:hint="@string/social"
        android:layout_marginRight="40dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="15dp"
        />
    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="ON"
        android:textOff="OFF"

        android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="18dp"
        android:layout_marginRight="40dp"
        android:hint="@string/random"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="15dp"
        />

        <RadioGroup
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:paddingTop="8dp"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/random_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:checked="true"
                android:text="@string/random1"/>
            <RadioButton
                android:id="@+id/important_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/important"/>


        </RadioGroup>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/notify3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="35dp"
        android:text="@string/notifyme"
        android:layout_marginRight="60dp"
        android:editable="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="ON"
            android:textOff="OFF"
            android:layout_alignParentEnd="true"/>


        <RadioGroup
            android:id="@+id/radio_group_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:visibility="gone"

            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/five"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ten"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/twenty"/>



        </RadioGroup>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:background="@drawable/save_button"
            android:clickable="true"
            android:text="Save"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/cancel_button"
            android:clickable="true"
            android:text="Cancel"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

</LinearLayout>